--- a/projects/address-sign/index.html
+++ b/projects/address-sign/index.html
@@ -1,393 +1,152 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Address Sign 3D</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.min.css" rel="stylesheet" type="text/css" />
+		<link rel="stylesheet" href="css/main.css" />
+	</head>
 
-<head>
-	<title>Address Sign 3D</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css" rel="stylesheet"
-		type="text/css" />
-	<style>
-		*,
-		*::before,
-		*::after {
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
-		}
-
-		::-webkit-scrollbar {
-			-webkit-appearance: none;
-			width: 7px;
-			height: 7px;
-		}
-
-		::-webkit-scrollbar-thumb {
-			border-radius: 4px;
-			background-color: grey;
-			box-shadow: 0 0 1px rgba(255, 255, 255, .5);
-
-		}
-
-		body {
-			height: 100vh;
-			overflow: hidden;
-			margin: 0px;
-			display: flex;
-		}
-
-
-		.settings {
-			height: 100%;
-			width: 50%;
-			padding: 30px 70px;
-			font-family: Roboto, sans-serif;
-			background: #272727;
-			color: #E5E5E5;
-		}
-
-		.settings h1 {
-			font-weight: 500;
-		}
-
-		button {
-			background-color: #272727;
-			border: 1px solid #6DA0DD;
-			border-radius: 8px;
-			box-sizing: border-box;
-			color: #6DA0DD;
-			cursor: pointer;
-			display: inline-block;
-			font-size: 16px;
-			line-height: 20px;
-			outline: none;
-			padding: 8px 14px;
-			text-align: center;
-			text-decoration: none;
-			touch-action: manipulation;
-			transition: box-shadow .2s, -ms-transform .1s, -webkit-transform .1s, transform .1s;
-			user-select: none;
-			-webkit-user-select: none;
-			width: auto;
-		}
-
-		button:active {
-			background-color: #363636;
-			transform: scale(.96);
-		}
-
-		button#apply {
-			margin-left: 30px;
-		}
-
-		section {
-			margin-top: 25px;
-			width: 100%;
-			/* display: inline-block; */
-			float: left;
-		}
-
-		section main {
-			padding-top: 10px;
-		}
-
-		section.address .row {
-			display: flex;
-			flex-wrap: wrap;
-			flex-direction: row;
-			gap: 20px;
-		}
-
-		section * {
-			font-weight: 300;
-		}
-
-		.types {
-			display: flex;
-			flex-wrap: wrap;
-			gap: 10px;
-			margin-bottom: 10px;
-		}
-
-		.sign-type input {
-			display: none;
-		}
-
-		.sign-type label {
-			display: inline-block;
-			border-radius: 10px;
-			overflow: hidden;
-			background: #363636;
-			height: 60px;
-			border: 1px solid transparent;
-			cursor: pointer;
-		}
-
-		.sign-type input:checked+label {
-			border-color: white;
-		}
-
-		.sign-type label img {
-			height: 100%;
-		}
-
-		.input-wrapper {
-			margin-bottom: 10px;
-		}
-
-		.input-wrapper:last-child {
-			margin-bottom: 0;
-		}
-
-		.input-wrapper label {
-			display: block;
-			color: #AAAAAA;
-			font-size: 90%;
-			margin-bottom: 5px;
-		}
-
-		.input-wrapper input {
-			border: none;
-			-webkit-appearance: none;
-			-ms-appearance: none;
-			-moz-appearance: none;
-			appearance: none;
-			background: #363636;
-			color: inherit;
-			padding: 8px 10px;
-			border-radius: 5px;
-			width: 250px;
-			font-size: 18px;
-		}
-
-		.input-wrapper select {
-			width: 250px;
-			padding: 8px 10px;
-			font-size: 18px;
-			border: none;
-			border-radius: 5px;
-			-webkit-appearance: none;
-			-moz-appearance: none;
-			appearance: none;
-			color: inherit;
-			background: url(https://static.thenounproject.com/png/551749-200.png) 94% / 8% no-repeat #363636;
-			cursor: pointer;
-		}
-
-		#preview {
-			height: 100%;
-			width: 50%;
-			background-color: #272727;
-			position: relative;
-		}
-
-		.buttons {
-			height: 100%;
-			width: 30px;
-			position: absolute;
-			top: 0;
-			left: 0;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			gap: 10px;
-			padding-left: 10px;
-		}
-
-		.buttons .button input {
-			display: none;
-		}
-
-		.buttons .button label {
-			display: block;
-			width: 55px;
-			height: 55px;
-			line-height: 60px;
-			text-align: center;
-			border-radius: 100%;
-			background-color: rgba(255, 255, 255, .4);
-			opacity: 0.5;
-			cursor: pointer;
-		}
-
-		.buttons .button input:checked+label {
-			opacity: 1;
-		}
-
-		.buttons .button label::before {
-			font-size: 30px;
-			font-family: 'Font Awesome 5 Pro';
-			font-weight: 300;
-		}
-
-		.buttons .button.backlight input+label::before {
-			content: "\f0eb";
-		}
-
-		.buttons .button.backlight input:checked+label::before {
-			content: "\f672";
-		}
-
-		.buttons .button.dimensions input+label::before {
-			content: "\f31e";
-		}
-
-		.buttons .button.dimensions input:checked+label::before {
-			content: "\f31e";
-			font-weight: 600;
-		}
-
-		@media only screen and (max-width: 1000px) {
-
-			body {
-				flex-direction: column-reverse;
-			}
-
-			button#apply {
-				display: block;
-				margin-top: 10px;
-				margin-left: 0;
-			}
-
-			.settings,
-			#preview {
-				width: 100%;
-			}
-
-			.settings {
-				height: 65vh;
-				overflow-y: scroll;
-				overflow-x: hidden;
-				padding: 15px 20px;
-				padding-bottom: 150px;
-			}
-
-			#preview {
-				height: 35vh;
-			}
-
-			section.type main {
-				display: flex;
-				overflow-x: scroll;
-			}
-
-			.sign-type {
-				margin-right: 20px;
-			}
-		}
-	</style>
-</head>
-
-<body>
-	<div class="settings">
-		<h1>Sign settings <button id="apply">Apply changes</button></h1>
-		<section class="type">
-			<h2>Type</h2>
-			<main>
-				<div class="types">
-					<div class="sign-type">
-						<input type="radio" name="type" id="type-1" value="0" checked>
-						<label for="type-1"><img src="img/sign_types/1.svg" alt=""></label>
+	<body>
+		<div class="settings">
+			<h1>Sign settings <button id="apply">Apply changes</button></h1>
+			<section class="type">
+				<h2>Type</h2>
+				<div class="content">
+					<div class="types">
+						<div class="sign-type">
+							<input type="radio" name="type" id="type-1" value="0" checked />
+							<label for="type-1"><img src="img/sign_types/1.svg" alt="First plate design" /></label>
+						</div>
+						<div class="sign-type">
+							<input type="radio" name="type" id="type-2" value="1" />
+							<label for="type-2"><img src="img/sign_types/2.svg" alt="Second plate design" /></label>
+						</div>
+						<div class="sign-type">
+							<input type="radio" name="type" id="type-3" value="2" />
+							<label for="type-3"><img src="img/sign_types/3.svg" alt="Third plate design" /></label>
+						</div>
+						<div class="sign-type">
+							<input type="radio" name="type" id="type-4" value="3" />
+							<label for="type-4"><img src="img/sign_types/4.svg" alt="Fourth plate design" /></label>
+						</div>
+						<div class="sign-type">
+							<input type="radio" name="type" id="type-5" value="4" />
+							<label for="type-5"><img src="img/sign_types/5.svg" alt="Fifth plate design" /></label>
+						</div>
 					</div>
-					<div class="sign-type">
-						<input type="radio" name="type" id="type-2" value="1">
-						<label for="type-2"><img src="img/sign_types/2.svg" alt=""></label>
-					</div>
-					<div class="sign-type">
-						<input type="radio" name="type" id="type-3" value="2">
-						<label for="type-3"><img src="img/sign_types/3.svg" alt=""></label>
-					</div>
-					<div class="sign-type">
-						<input type="radio" name="type" id="type-4" value="3">
-						<label for="type-4"><img src="img/sign_types/4.svg" alt=""></label>
-					</div>
-					<div class="sign-type">
-						<input type="radio" name="type" id="type-5" value="4">
-						<label for="type-5"><img src="img/sign_types/5.svg" alt=""></label>
+					<div class="row">
+						<div class="input-wrapper">
+							<label for="font">Font</label>
+							<div class="input-content">
+								<select name="font" id="font"></select>
+							</div>
+						</div>
+						<div class="input-wrapper">
+							<label>Size</label>
+							<div class="input-content">
+								<div class="options"></div>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="input-wrapper">
-					<label for="font">Font</label>
-					<select name="font" id="font"></select>
+			</section>
+			<section class="address">
+				<h2>Address</h2>
+				<div class="content">
+					<div class="row">
+						<div class="input-wrapper">
+							<label for="address-line-1">Address Line 1</label>
+							<div class="input-content">
+								<input type="text" id="address-line-1" name="address-line-1" />
+							</div>
+						</div>
+						<div class="input-wrapper">
+							<label for="address-line-2">Address Line 2</label>
+							<div class="input-content">
+								<input type="text" id="address-line-2" name="address-line-2" />
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="input-wrapper">
+							<label for="street-number">Street Number</label>
+							<div class="input-content">
+								<input type="text" id="street-number" name="street-number" />
+							</div>
+						</div>
+						<div class="input-wrapper">
+							<label for="backlight-color">Color</label>
+							<div class="input-content">
+								<select name="backlight-color" id="backlight-color"></select>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="input-wrapper">
+							<label for="backlight-color">Add backlight</label>
+							<div class="input-content">
+								<div class="options">
+									<div class="option">
+										<input type="radio" name="backlight" id="backlight-yes" checked />
+										<label for="backlight-yes">YES</label>
+									</div>
+									<div class="option">
+										<input type="radio" name="backlight" id="backlight-no" />
+										<label for="backlight-no">NO</label>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-			</main>
-		</section>
-		<section class="address">
-			<h2>Address</h2>
-			<main>
-				<div class="row">
-					<div class="input-wrapper">
-						<label for="address-line-1">Address Line 1</label>
-						<input type="text" id="address-line-1" name="address-line-1">
-					</div>
-					<div class="input-wrapper">
-						<label for="address-line-2">Address Line 2</label>
-						<input type="text" id="address-line-2" name="address-line-2">
-					</div>
+			</section>
+			<section class="price">
+				<h2>Price</h2>
+				<div class="content">
+					<table>
+						<tr>
+							<td>
+								<h3>Base price:</h3>
+							</td>
+							<td>
+								<h3>$<span id="base-price">-</span></h3>
+							</td>
+						</tr>
+						<tr>
+							<td>Size:</td>
+							<td>$<span id="size-price">-</span></td>
+						</tr>
+						<tr id="backlight-tr">
+							<td>Backlight:</td>
+							<td>$<span id="backlight-price">-</span></td>
+						</tr>
+						<tr>
+							<td>
+								<h2>Total Price:</h2>
+							</td>
+							<td>
+								<h2>$<span id="total-price">-</span></h2>
+							</td>
+						</tr>
+					</table>
 				</div>
-				<div class="row">
-					<div class="input-wrapper">
-						<label for="street-number">Street Number</label>
-						<input type="text" id="street-number" name="street-number">
-					</div>
-					<div class="input-wrapper">
-						<label for="backlight-color">Color</label>
-						<select name="backlight-color" id="backlight-color"></select>
-					</div>
+			</section>
+		</div>
+		<div id="preview">
+			<div class="buttons">
+				<div class="button backlight">
+					<input type="checkbox" name="toggle-backlight" id="toggle-backlight" />
+					<label for="toggle-backlight"> </label>
 				</div>
-			</main>
-		</section>
-		<section class="price">
-			<h2>Price</h2>
-			<main>
 
-			</main>
-		</section>
-	</div>
-	<div id="preview">
-		<div class="buttons">
-			<div class="button backlight">
-				<input type="checkbox" name="toggle-backlight" id="toggle-backlight">
-				<label for="toggle-backlight"> </label>
-			</div>
-
-			<div class="button dimensions">
-				<input type="checkbox" name="toggle-dimensions" id="toggle-dimensions">
-				<label for="toggle-dimensions"> </label>
+				<div class="button dimensions">
+					<input type="checkbox" name="toggle-dimensions" id="toggle-dimensions" />
+					<label for="toggle-dimensions"> </label>
+				</div>
 			</div>
 		</div>
-	</div>
 
-
-	<script type="x-shader/x-vertex" id="vertexshader">
-
-		varying vec2 vUv;
-
-		void main() {
-
-			vUv = uv;
-
-			gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-
-		}
-
-	</script>
-
-	<script type="x-shader/x-fragment" id="fragmentshader">
-
-		uniform sampler2D baseTexture;
-		uniform sampler2D bloomTexture;
-
-		varying vec2 vUv;
-
-		void main() {
-
-			gl_FragColor = ( texture2D( baseTexture, vUv ) + vec4( 1.0 ) * texture2D( bloomTexture, vUv ) );
-
-		}
-
-	</script>
-
-	<script type="module" src="bundle.js"></script>
-</body>
-
+		<script type="module" src="js/bundle.js"></script>
+	</body>
 </html>
