Update from https://github.com/YuriyBl/address-sign/commit/4ce9a374164f872aead253b95bfc266d37317e51

--- a/projects/address-sign/index.html
+++ b/projects/address-sign/index.html
@@ -1,152 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Address Sign 3D</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.min.css" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" href="css/main.css" />
-	</head>
-
-	<body>
-		<div class="settings">
-			<h1>Sign settings <button id="apply">Apply changes</button></h1>
-			<section class="type">
-				<h2>Type</h2>
-				<div class="content">
-					<div class="types">
-						<div class="sign-type">
-							<input type="radio" name="type" id="type-1" value="0" checked />
-							<label for="type-1"><img src="img/sign_types/1.svg" alt="First plate design" /></label>
-						</div>
-						<div class="sign-type">
-							<input type="radio" name="type" id="type-2" value="1" />
-							<label for="type-2"><img src="img/sign_types/2.svg" alt="Second plate design" /></label>
-						</div>
-						<div class="sign-type">
-							<input type="radio" name="type" id="type-3" value="2" />
-							<label for="type-3"><img src="img/sign_types/3.svg" alt="Third plate design" /></label>
-						</div>
-						<div class="sign-type">
-							<input type="radio" name="type" id="type-4" value="3" />
-							<label for="type-4"><img src="img/sign_types/4.svg" alt="Fourth plate design" /></label>
-						</div>
-						<div class="sign-type">
-							<input type="radio" name="type" id="type-5" value="4" />
-							<label for="type-5"><img src="img/sign_types/5.svg" alt="Fifth plate design" /></label>
-						</div>
-					</div>
-					<div class="row">
-						<div class="input-wrapper">
-							<label for="font">Font</label>
-							<div class="input-content">
-								<select name="font" id="font"></select>
-							</div>
-						</div>
-						<div class="input-wrapper">
-							<label>Size</label>
-							<div class="input-content">
-								<div class="options"></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="address">
-				<h2>Address</h2>
-				<div class="content">
-					<div class="row">
-						<div class="input-wrapper">
-							<label for="address-line-1">Address Line 1</label>
-							<div class="input-content">
-								<input type="text" id="address-line-1" name="address-line-1" />
-							</div>
-						</div>
-						<div class="input-wrapper">
-							<label for="address-line-2">Address Line 2</label>
-							<div class="input-content">
-								<input type="text" id="address-line-2" name="address-line-2" />
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="input-wrapper">
-							<label for="street-number">Street Number</label>
-							<div class="input-content">
-								<input type="text" id="street-number" name="street-number" />
-							</div>
-						</div>
-						<div class="input-wrapper">
-							<label for="backlight-color">Color</label>
-							<div class="input-content">
-								<select name="backlight-color" id="backlight-color"></select>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="input-wrapper">
-							<label for="backlight-color">Add backlight</label>
-							<div class="input-content">
-								<div class="options">
-									<div class="option">
-										<input type="radio" name="backlight" id="backlight-yes" checked />
-										<label for="backlight-yes">YES</label>
-									</div>
-									<div class="option">
-										<input type="radio" name="backlight" id="backlight-no" />
-										<label for="backlight-no">NO</label>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="price">
-				<h2>Price</h2>
-				<div class="content">
-					<table>
-						<tr>
-							<td>
-								<h3>Base price:</h3>
-							</td>
-							<td>
-								<h3>$<span id="base-price">-</span></h3>
-							</td>
-						</tr>
-						<tr>
-							<td>Size:</td>
-							<td>$<span id="size-price">-</span></td>
-						</tr>
-						<tr id="backlight-tr">
-							<td>Backlight:</td>
-							<td>$<span id="backlight-price">-</span></td>
-						</tr>
-						<tr>
-							<td>
-								<h2>Total Price:</h2>
-							</td>
-							<td>
-								<h2>$<span id="total-price">-</span></h2>
-							</td>
-						</tr>
-					</table>
-				</div>
-			</section>
-		</div>
-		<div id="preview">
-			<div class="buttons">
-				<div class="button backlight">
-					<input type="checkbox" name="toggle-backlight" id="toggle-backlight" />
-					<label for="toggle-backlight"> </label>
-				</div>
-
-				<div class="button dimensions">
-					<input type="checkbox" name="toggle-dimensions" id="toggle-dimensions" />
-					<label for="toggle-dimensions"> </label>
-				</div>
-			</div>
-		</div>
-
-		<script type="module" src="js/bundle.js"></script>
-	</body>
-</html>
+<!DOCTYPE html><html><head><title>Address Sign 3D</title><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.min.css" rel="stylesheet" type="text/css"><script defer="defer" src="654.23e87060252d46a2351b.js"></script><script defer="defer" src="main.e459372d5215e801b835.js"></script><link href="main.b8511964d489e447a3ef.css" rel="stylesheet"></head><body><div class="settings"><h1>Sign settings <button id="apply">Apply changes</button></h1><section class="type"><h2>Type</h2><div class="content"><div class="types"><div class="sign-type"><input type="radio" name="type" id="type-1" value="0" checked="checked"> <label for="type-1"><img src="assets/images/1.aa81bd400267468eb0d7231e11e01001.svg" alt="First plate design"></label></div><div class="sign-type"><input type="radio" name="type" id="type-2" value="1"> <label for="type-2"><img src="assets/images/2.3c84f7b2f164662b08e29b8a9d8aff8e.svg" alt="Second plate design"></label></div><div class="sign-type"><input type="radio" name="type" id="type-3" value="2"> <label for="type-3"><img src="assets/images/3.98a84841d57d21e7c3d8bca6e3e778f9.svg" alt="Third plate design"></label></div><div class="sign-type"><input type="radio" name="type" id="type-4" value="3"> <label for="type-4"><img src="assets/images/4.e4b3fd57e53816fee92162b5850916dd.svg" alt="Fourth plate design"></label></div><div class="sign-type"><input type="radio" name="type" id="type-5" value="4"> <label for="type-5"><img src="assets/images/5.d225e0a5fa4b11f82184bef617afc3af.svg" alt="Fifth plate design"></label></div></div><div class="row"><div class="input-wrapper"><label for="font">Font</label><div class="input-content"><select name="font" id="font"></select></div></div><div class="input-wrapper"><label>Size</label><div class="input-content"><div class="options"></div></div></div></div></div></section><section class="address"><h2>Address</h2><div class="content"><div class="row"><div class="input-wrapper"><label for="address-line-1">Address Line 1</label><div class="input-content"><input type="text" id="address-line-1" name="address-line-1"></div></div><div class="input-wrapper"><label for="address-line-2">Address Line 2</label><div class="input-content"><input type="text" id="address-line-2" name="address-line-2"></div></div></div><div class="row"><div class="input-wrapper"><label for="street-number">Street Number</label><div class="input-content"><input type="text" id="street-number" name="street-number"></div></div><div class="input-wrapper"><label for="backlight-color">Color</label><div class="input-content"><select name="backlight-color" id="backlight-color"></select></div></div></div><div class="row"><div class="input-wrapper"><label for="backlight-color">Add backlight</label><div class="input-content"><div class="options"><div class="option"><input type="radio" name="backlight" id="backlight-yes" checked="checked"> <label for="backlight-yes">YES</label></div><div class="option"><input type="radio" name="backlight" id="backlight-no"> <label for="backlight-no">NO</label></div></div></div></div></div></div></section><section class="price"><h2>Price</h2><div class="content"><table><tr><td><h3>Base price:</h3></td><td><h3>$<span id="base-price">-</span></h3></td></tr><tr><td>Size:</td><td>$<span id="size-price">-</span></td></tr><tr id="backlight-tr"><td>Backlight:</td><td>$<span id="backlight-price">-</span></td></tr><tr><td><h2>Total Price:</h2></td><td><h2>$<span id="total-price">-</span></h2></td></tr></table></div></section></div><div id="preview"><div class="buttons"><div class="button backlight"><input type="checkbox" name="toggle-backlight" id="toggle-backlight"> <label for="toggle-backlight"></label></div><div class="button dimensions"><input type="checkbox" name="toggle-dimensions" id="toggle-dimensions"> <label for="toggle-dimensions"></label></div></div></div></body></html>
